Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
	name: nginx
spec:
	replicas: 1
	template:
		metadata:
			labels:
				app:nginx
		spec: 
			containers:
			- name: nginx
				  image: nginx
				  ports:
				  - containerPort: 8080
					  protocol: TCP
