Service.yaml
apiVersion: v1
kind: Service
metadata:
	name: nginx-service
spec:
	selector:
		app: nginx
	ports:
		- port: 80
		  targetport: 8080
		  protocol: TCP
