Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
	name:web
	namespace: default
	annotations:
		nginx.ingress.kubernetes.io/ssl-redirect: "false"
		nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
	rules:
	- http:
		paths:
		- path: "/"
		  backend:
			serviceName: nginx-service
			servicePort: 80
